k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
 name: demo-app
 namespace: demo

spec:
 replicas: 2

 selector:
   matchLabels:
     app: demo-app

 template:

   metadata:
     labels:
       app: demo-app

   spec:

     containers:

     - name: demo-app

       image: 645519535125.dkr.ecr.ap-south-2.amazonaws.com/demo-app:latest

       ports:
       - containerPort: 80

       resources:

         requests:
           cpu: "100m"
           memory: "128Mi"

         limits:
           cpu: "500m"
           memory: "512Mi"

       readinessProbe:
         httpGet:
           path: /
           port: 80

         initialDelaySeconds: 5

       livenessProbe:
         httpGet:
           path: /
           port: 80

         initialDelaySeconds: 10
