k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
 name: demo-service
 namespace: demo

spec:

 selector:
   app: demo-app

 ports:

 - port: 80
   targetPort: 80

 type: NodePort
